--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "^3.3.6",
-    "angular-cookies": "^1.5.5"
+    "angular-cookies": "^1.5.5",
+    "angular-bootstrap": "^1.3.2"
   }
 }
