--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "^3.3.6",
     "angular-cookies": "^1.5.5",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "angular-ui-notification": "^0.2.0"
   }
 }
