--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.6",
     "angular-cookies": "^1.5.5",
     "angular-bootstrap": "^1.3.2",
-    "angular-ui-notification": "^0.2.0"
+    "angular-ui-notification": "^0.2.0",
+    "angular-material": "^1.0.7"
   }
 }
