--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-cookies": "^1.5.5",
     "angular-bootstrap": "^1.3.2",
     "angular-ui-notification": "^0.2.0",
-    "angular-material": "^1.0.7"
+    "angular-material": "^1.0.7",
+    "angular-messages": "^1.5.5"
   }
 }
